<?xml version="1.0"?>
<package format="2">
  <name>bag_processor</name>
  <version>1.0.0</version>
  <description>ROS bag file analyzer and image extractor</description>

  <maintainer email="user@example.com">User</maintainer>
  <license>MIT</license>

  <buildtool_depend>catkin</buildtool_depend>

  <depend>rosbag</depend>
  <depend>sensor_msgs</depend>
  <depend>cv_bridge</depend>
  <depend>roscpp</depend>
  <depend>opencv2</depend>

  <export>
  </export>
</package>